@@ -113,6 +113,7 @@ CREATE TABLE tx_realurl_redirects (
 CREATE TABLE pages (
 	tx_realurl_pathsegment varchar(60) DEFAULT '' NOT NULL,
 	tx_realurl_exclude int(1) DEFAULT '0' NOT NULL,
+	tx_realurl_nocache int(1) DEFAULT '0' NOT NULL,
 );
 
 #
