@@ -1,0 +1,16 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
+<T3locallang>
+	<meta type="array">
+		<description>CSH for additional pages fields</description>
+		<type>CSH</type>
+		<csh_table>tt_content</csh_table>
+		<fileId>EXT:realurl/locallang_csh.xml</fileId>
+	</meta>
+	<data type="array">
+		<languageKey index="default" type="array">
+			<label index="tx_realurl_nocache.description">Disables RealURL encode and decode cache for this page only</label>
+			<label index="tx_realurl_pathsegment.description">URL path segment for this. Only valud URL characters are allowed, namely: latin letters, numbers, underscore and/or minus character.</label>
+			<label index="tx_realurl_exclude.description">Excludes this page from the speaking URL. Note that this works only if this page is not the target page of the reader.</label>
+		</languageKey>
+	</data>
+</T3locallang>
