@@ -11,6 +11,7 @@
 		<languageKey index="default" type="array">
 			<label index="pages.tx_realurl_pathsegment">Speaking URL path segment:</label>
 			<label index="pages.tx_realurl_exclude">Exclude from speaking URL:</label>
+			<label index="pages.tx_realurl_nocache">Disable RealURL cache</label>
 			<label index="moduleFunction.tx_realurl_modfunc1">Speaking Url Management</label>
 		</languageKey>
 	</data>
