@@ -1,6 +1,7 @@
 2010-06-01  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
 
 	* Fixed bug #12383: Append suffix depending on GETvars
+	* Fixed bug #14576: Add a flag to the page to exclude it from RealURL caches
 
 2010-05-31  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
 
